# projeto-integrador-3-machine-learning

./: .gitattributes  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
credentials/: README.md
data/: README.md
models/: README.md
notebooks/: README.md  requirements.txt
notebooks/exploratory/: 0_eda_dados_gerados.ipynb  1_processamento_dados_gerados.ipynb  2_modelagem_rfc_dados_gerados.ipynb
requirements/: README.md  requirements_dev.txt  requirements_package.txt
scripts/: setup_project.bat  setup_project.ps1  setup_project.sh
src/: config.py  datasets.py
src/gerador_dados/: __init__.py  gerador.py
src/gerador_dados/componentes/: dado_gerado.py  gerador_dados_fraudados.py  gerador_dados_legitimos.py
src/sistema_antifraude/: __init__.py  classificador.py  config.py  datasets.py  default.py
src/sistema_antifraude/gerador_dados/: __init__.py  gerador.py
src/sistema_antifraude/gerador_dados/componentes/: gerador_dados_fraudados.py  gerador_dados_legitimos.py
src/sistema_antifraude/gerador_dados/defaults/: horarios.py
src/sistema_antifraude/modelagem/: metricas.py  parametros.py  processamento.py  serializacao.py
src/sistema_antifraude/tests/: test_datasets.py  test_gerador_dados.py
src/sistema_antifraude/utilidades/: geolocalizacao.py
src/tests/: fixtures.py  test_datasets.py  test_gerador_dados.py
