[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projeto_integrador"
version = "0.1.0"
description = "A machine learning project"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["src"]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }